@@ -21,6 +21,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #1959855 [interface] Font size option problem when no config file 
 - bug #1982489 [relation] Relationship view should check for changes 
 - bug [history] Do not save too big queries in history 
+- [security] Do not show version info on login screen 
 
 2.11.7.0 (2008-06-23)
 - bug #1908719 [interface] New field cannot be auto-increment and primary key 
